@@ -158,6 +158,8 @@ else printf ("   ");
 
 				t_scanline=0;
 
+                                timer_get_elapsed_core_frame_post();
+
                                 //Parche para maquinas que no generan 312 lineas, porque si enviamos menos sonido se escuchara un click al final
                                 //Es necesario que cada frame de pantalla contenga 312 bytes de sonido
 				//Igualmente en la rutina de envio_audio se vuelve a comprobar que todo el sonido a enviar
@@ -243,6 +245,9 @@ else printf ("   ");
                         esperando_tiempo_final_t_estados.v=0;
                         interlaced_numero_frame++;
                         //printf ("%d\n",interlaced_numero_frame);
+
+                        //Para calcular lo que se tarda en ejecutar todo un frame
+                        timer_get_elapsed_core_frame_pre();		                        
                 }
 
 
