@@ -241,6 +241,8 @@ void cpu_core_loop_sam(void)
 
 		                t_scanline=0;
 
+						timer_get_elapsed_core_frame_post();
+
 		                //printf ("final scan lines. total: %d\n",screen_scanlines);
                 		        //printf ("reset no inves\n");
 					set_t_scanline_draw_zero();
@@ -344,6 +346,9 @@ void cpu_core_loop_sam(void)
                         esperando_tiempo_final_t_estados.v=0;
 			interlaced_numero_frame++;
 			//printf ("%d\n",interlaced_numero_frame);
+
+					//Para calcular lo que se tarda en ejecutar todo un frame
+					timer_get_elapsed_core_frame_pre();					
                 }
 
 
